tests/snapshots/codegen_snapshot_tests__control_flow.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_if_statements() {
    let x: i64 = 10;
    if x > 5 {
        let _ = println!("{}", "x is greater than 5");
    }
    if x < 5 {
        let _ = println!("{}", "x is less than 5");
    } else {
        let _ = println!("{}", "x is not less than 5");
    }
    if x < 5 {
        let _ = println!("{}", "small");
    } else {
        if x < 15 {
            let _ = println!("{}", "medium");
        } else {
            let _ = println!("{}", "large");
        }
    }
}
fn test_while_loops() {
    let mut i: i64 = 0;
    while i < 5 {
        let _ = println!("{}", i);
        i = i + 1;
    }
    let mut j: i64 = 0;
    loop {
        if j >= 3 {
            break;
        }
        let _ = println!("{}", j);
        j = j + 1;
    }
    let mut k: i64 = 0;
    while k < 5 {
        k = k + 1;
        if k == 3 {
            continue;
        }
        let _ = println!("{}", k);
    }
}
fn test_for_loops() {
    let numbers: Vec<i64> = vec![1, 2, 3, 4, 5];
    for num in numbers.iter().copied() {
        let _ = println!("{}", num);
    }
    for i in 0_i64..(5 as i64) {
        let _ = println!("{}", i);
    }
    for i in 0_i64..(10 as i64) {
        if i == 5 {
            break;
        }
        let _ = println!("{}", i);
    }
    for i in 0_i64..(5 as i64) {
        if i == 2 {
            continue;
        }
        let _ = println!("{}", i);
    }
}
fn test_nested_control_flow() {
    for i in 0_i64..(3 as i64) {
        for j in 0_i64..(3 as i64) {
            if i == j {
                continue;
            }
            let _ = println!(
                "{}", { let __parts : [& str; 3usize] = ["", ",", ""]; let __args : Vec <
                String > = vec![format!("{}", i), format!("{}", j)];
                incan_stdlib::strings::fstring(& __parts, & __args) }
            );
        }
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_if_statements();
    let _ = test_while_loops();
    let _ = test_for_loops();
    let _ = test_nested_control_flow();
}
