tests/snapshots/codegen_snapshot_tests__decorated_variadic_function.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&__INCAN_DECORATED_DECORATED_TOTAL);
        });
}
fn preserve<F>() -> fn(F) -> F {
    __incan_init_module_statics();
    return |func| func;
}
fn __incan_original_decorated_total(
    first: i64,
    second: i64,
    rest: Vec<i64>,
    labels: std::collections::HashMap<String, String>,
) -> i64 {
    __incan_init_module_statics();
    let mut total: i64 = first + second;
    for value in rest.iter().copied() {
        total = total + value;
    }
    if incan_std_core::strings::str_eq(
        &incan_std_core::collections::dict_get(
                &labels,
                <_ as AsRef<str>>::as_ref(&"mode"),
            )
            .clone(),
        &"sum",
    ) {
        return total;
    }
    return -1;
}
static __INCAN_DECORATED_DECORATED_TOTAL: std::sync::LazyLock<
    incan_std_core::storage::StaticCell<
        fn(i64, i64, Vec<i64>, std::collections::HashMap<String, String>) -> i64,
    >,
> = std::sync::LazyLock::new(|| incan_std_core::storage::StaticCell::new(
    preserve()(__incan_original_decorated_total),
));
pub fn decorated_total(
    first: i64,
    second: i64,
    rest: Vec<i64>,
    labels: std::collections::HashMap<String, String>,
) -> i64 {
    __incan_init_module_statics();
    return {
        __incan_init_module_statics();
        __INCAN_DECORATED_DECORATED_TOTAL.get()
    }(
        first,
        second,
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.extend(rest);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.extend(labels);
            __incan_rest_kwargs
        },
    );
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    return decorated_total(
        1,
        2,
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.push(3);
            __incan_rest_args.push(4);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.insert("mode".to_string(), "sum".to_string());
            __incan_rest_kwargs
        },
    );
}
