tests/snapshots/codegen_snapshot_tests__explicit_call_site_generics.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn id<T>(x: T) -> T {
    return x;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Boxed {}
impl incan_stdlib::reflection::HasClassName for Boxed {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Boxed {
    fn __class_name__() -> &'static str {
        "Boxed"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Boxed {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Boxed {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Boxed {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Boxed {
    pub fn pick<T>(&self, value: T) -> T {
        return value;
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let a = id::<i64>(1);
    let b = Boxed {};
    let c = b.pick::<i64>(2);
    return a + c;
}
