tests/snapshots/codegen_snapshot_tests__fixed_call_unpack.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn combine(
    _: i64,
    _: String,
    _: Vec<i64>,
    labels: std::collections::HashMap<String, String>,
) -> String {
    return incan_std_core::collections::dict_get(
            &labels,
            <_ as AsRef<str>>::as_ref(&"city"),
        )
        .clone();
}
fn route(path: String, method: String) -> String {
    return incan_std_core::strings::str_concat(
        &incan_std_core::strings::str_concat(&method, &" "),
        &path,
    );
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Counter {}
impl incan_std_core::reflection::HasClassName for Counter {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Counter {
    fn __class_name__() -> &'static str {
        "Counter"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Counter {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Counter {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Counter {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Counter {
    pub fn add(&self, left: i64, right: i64) -> i64 {
        return left + right;
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let xy: (i64, String, i64) = (1, "Ada".to_string(), 7);
    let counter = Counter {};
    let _ = combine(
        1,
        "Ada".to_string(),
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.push(7);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.insert("city".to_string(), "London".to_string());
            __incan_rest_kwargs.insert("name".to_string(), "Ada".to_string());
            __incan_rest_kwargs
        },
    );
    let _ = combine(
        xy.0,
        xy.1.clone(),
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.push(xy.2);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.insert("city".to_string(), "Paris".to_string());
            __incan_rest_kwargs.insert("name".to_string(), "Grace".to_string());
            __incan_rest_kwargs
        },
    );
    let _ = route("/status".to_string(), "GET".to_string());
    let _ = counter.add(5, 6);
}
