tests/snapshots/codegen_snapshot_tests__for_in_list_enum_equality.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
enum RootKind {
    A,
    B,
}
impl incan_stdlib::reflection::HasTypeClassName for RootKind {
    fn __class_name__() -> &'static str {
        "RootKind"
    }
}
fn matches_any(root_kind: RootKind, required: Vec<RootKind>) -> bool {
    for expected in required.iter().cloned() {
        if expected == root_kind {
            return true;
        }
    }
    return false;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", matches_any(RootKind::A.clone(), vec![RootKind::A.clone()]));
}
